<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.authentication.SignInOptionsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/customToolbar"
            layout="@layout/custom_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/LargeHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/let_s_you_in"
            app:layout_constraintBottom_toTopOf="@+id/btnSignInWithFacebook"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/customToolbar" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignInWithFacebook"
            style="@style/ImageButtonWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_16sdp"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/continue_with_facebook"
            app:icon="@drawable/ic_facebook"
            app:layout_constraintBottom_toTopOf="@+id/btnSignInWithGoogle"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignInWithGoogle"
            style="@style/ImageButtonWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/continue_with_google"
            app:icon="@drawable/ic_google"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignInWithApple"
            style="@style/ImageButtonWithText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/continue_with_apple"
            app:icon="@drawable/ic_apple"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btnSignInWithGoogle" />

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="2dp"
            android:background="@color/Greyscale_200"
            app:layout_constraintBottom_toBottomOf="@+id/tvOr"
            app:layout_constraintEnd_toStartOf="@+id/tvOr"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvOr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOr"
            style="@style/CustomDividerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_35sdp"
            android:text="@string/or"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@+id/btnSignInWithApple" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="2dp"
            android:background="@color/Greyscale_200"
            app:layout_constraintBottom_toBottomOf="@+id/tvOr"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/tvOr"
            app:layout_constraintTop_toTopOf="@+id/tvOr" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignInWithPassword"
            style="@style/CustomPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:text="@string/sign_in_with_password"
            app:layout_constraintEnd_toEndOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tvOr" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDoNotHaveAcc"
            style="@style/TextViewWithLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_75sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:text="@string/don_t_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btnSignInWithPassword" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_24sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_24sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>