<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.WelcomeActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        android:src="@drawable/second_splash_bg" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/second_splash_gradient_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_32sdp" />

    <TextView
        android:id="@+id/tvGreet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_bold"
        android:text="@string/welcome_to"
        android:textColor="@color/white"
        android:textSize="@dimen/_30ssp"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/urbanist_black"
        android:text="@string/parkir"
        android:textColor="@color/white"
        android:textSize="@dimen/_75sdp"
        app:layout_constraintBottom_toTopOf="@+id/tvDescription"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1" />

    <TextView
        android:id="@+id/tvDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_15sdp"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/tag_line"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="@+id/guideline2"
        app:layout_constraintStart_toEndOf="@+id/guideline1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_64sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/urbanist_semibold"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>