<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.authentication.CreateNewPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/customToolbar"
            layout="@layout/custom_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPoster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:src="@drawable/ic_create_new_password_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customToolbar" />

        <TextView
            android:id="@+id/tvInformation"
            style="@style/RegularFontTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginHorizontal="@dimen/_19sdp"
            android:text="@string/create_your_new_password"
            app:layout_constraintTop_toBottomOf="@+id/ivPoster" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/CustomMainEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:drawableStart="@drawable/custom_lock"
            android:drawableEnd="@drawable/custom_eye_hidden"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/etConfirmPassword"
            app:layout_constraintEnd_toEndOf="@id/tvInformation"
            app:layout_constraintStart_toStartOf="@id/tvInformation"
            app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etConfirmPassword"
            style="@style/CustomMainEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:drawableStart="@drawable/custom_lock"
            android:drawableEnd="@drawable/custom_eye_hidden"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbRememberMe"
            style="@style/CustomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/remember_me"
            app:layout_constraintEnd_toEndOf="@id/etConfirmPassword"
            app:layout_constraintStart_toStartOf="@id/etConfirmPassword"
            app:layout_constraintTop_toBottomOf="@+id/etConfirmPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnContinue"
            style="@style/CustomPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/forgot_password_continue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/etPassword"
            app:layout_constraintStart_toStartOf="@id/etPassword"
            app:layout_constraintTop_toBottomOf="@+id/cbRememberMe" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>