<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        android:src="@drawable/ic_success_alert_poster"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewCongrats"
        style="@style/AlertHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_24sdp"
        android:text="@string/congratulations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageViewAlert" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewSubHeaderDialog"
        style="@style/RegularFontTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_11sdp"
        android:text="@string/your_account_is_ready_to_use"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@id/textViewCongrats"
        app:layout_constraintStart_toStartOf="@id/textViewCongrats"
        app:layout_constraintTop_toBottomOf="@id/textViewCongrats" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGoToHomepage"
        style="@style/CustomPrimaryButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_29sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:shadowColor="@color/primary_500"
        android:shadowDx="4"
        android:shadowDy="12"
        android:text="@string/go_to_homepage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/textViewCongrats"
        app:layout_constraintStart_toStartOf="@id/textViewCongrats"
        app:layout_constraintTop_toBottomOf="@id/textViewSubHeaderDialog" />

</androidx.constraintlayout.widget.ConstraintLayout>