<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.authentication.SignInActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/customToolbar"
            layout="@layout/custom_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/LargeHeaderTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_37sdp"
            android:text="@string/login_to_your_account"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/customToolbar" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            style="@style/CustomMainEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:drawableStart="@drawable/custom_message"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPassword"
            style="@style/CustomMainEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:drawableStart="@drawable/custom_lock"
            android:drawableEnd="@drawable/custom_eye_hidden"
            android:hint="@string/password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cbRememberMe"
            style="@style/CustomCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/remember_me"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            style="@style/CustomPrimaryButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/sign_in"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/cbRememberMe" />

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_19sdp"
            android:fontFamily="@font/urbanist_semibold"
            android:text="@string/forgot_the_password"
            android:textAlignment="center"
            android:textColor="@color/primary_500"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

        <View
            android:id="@+id/view1"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="2dp"
            android:background="@color/Greyscale_200"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrContinueWith"
            app:layout_constraintEnd_toStartOf="@+id/tvOrContinueWith"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/tvOrContinueWith" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvOrContinueWith"
            style="@style/CustomDividerTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/or_continue_with"
            app:layout_constraintEnd_toStartOf="@+id/view2"
            app:layout_constraintStart_toEndOf="@id/view1"
            app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

        <View
            android:id="@+id/view2"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="2dp"
            android:background="@color/Greyscale_200"
            app:layout_constraintBottom_toBottomOf="@+id/tvOrContinueWith"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@id/tvOrContinueWith"
            app:layout_constraintTop_toTopOf="@+id/tvOrContinueWith" />

        <ImageButton
            android:id="@+id/imgBtnFacebook"
            style="@style/SocialMediaButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            app:layout_constraintEnd_toStartOf="@+id/imgBtnGoogle"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/imgBtnGoogle" />

        <ImageButton
            android:id="@+id/imgBtnGoogle"
            style="@style/SocialMediaButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/ic_google"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/tvOrContinueWith" />

        <ImageButton
            android:id="@+id/imgBtnApple"
            style="@style/SocialMediaButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_apple"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toEndOf="@+id/imgBtnGoogle"
            app:layout_constraintTop_toTopOf="@+id/imgBtnGoogle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSignUp"
            style="@style/TextViewWithLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginBottom="@dimen/_35sdp"
            android:text="@string/already_have_an_account"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guideline2"
            app:layout_constraintStart_toStartOf="@id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/imgBtnGoogle" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_18sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_18sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>